--- a/Sam530/Components/Layout/NavMenu.razor
+++ b/Sam530/Components/Layout/NavMenu.razor
@@ -1,4 +1,5 @@
-﻿@inject NavigationManager Navigation
+﻿@using Microsoft.AspNetCore.Components.Authorization
+@inject NavigationManager Navigation
 
 <div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
@@ -10,30 +11,42 @@
 
 <div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
     <nav class="flex-column">
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="radius">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Radius
-            </NavLink>
-        </div>
 
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="syslog">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Syslog
-            </NavLink>
-        </div>
+        <AuthorizeView>
+            <Authorized>
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+                        <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
+                    </NavLink>
+                </div>
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="radius">
+                        <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Radius
+                    </NavLink>
+                </div>
 
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="upload">
-                <span class="bi bi-box-arrow-left-nav-menu" aria-hidden="true"></span> Update Firmware
-            </NavLink>
-        </div>
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="syslog">
+                        <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Syslog
+                    </NavLink>
+                </div>
+
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="upload">
+                        <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Update Firmware
+                    </NavLink>
+                </div>
+                <NavLink class="nav-link" href="/logout">
+                    <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Logout
+                </NavLink>
+            </Authorized>
+            <NotAuthorized>
+
+            </NotAuthorized>
+            <!-- Si quieres mostrar algo para no autenticados, puedes usar <NotAuthorized> -->
+        </AuthorizeView>
+       
 
     </nav>
 </div>
-
 
