--- a/Sam530/Components/Pages/Home.razor
+++ b/Sam530/Components/Pages/Home.razor
@@ -1,4 +1,5 @@
-﻿@page "/"
+﻿@attribute [Authorize]
+@page "/"
 @rendermode InteractiveServer
 @using System.Net
 @using System.ComponentModel.DataAnnotations
