--- a/Sam530/Components/Pages/Radius.razor
+++ b/Sam530/Components/Pages/Radius.razor
@@ -1,4 +1,5 @@
-﻿@page "/radius"
+﻿@attribute [Authorize]
+@page "/radius"
 @rendermode InteractiveServer
 @using System.ComponentModel.DataAnnotations
 @using DataStore.Models
