--- a/Sam530/Components/Pages/Syslog.razor
+++ b/Sam530/Components/Pages/Syslog.razor
@@ -1,4 +1,5 @@
-﻿@page "/syslog"
+﻿@attribute [Authorize]
+@page "/syslog"
 @rendermode InteractiveServer
 @using System.ComponentModel.DataAnnotations
 @using DataStore.Models
