Login razor. No funciona bé Upload firmware.

--- a/Login.razor
+++ b/Login.razor
@@ -1,4 +1,5 @@
 ﻿@page "/login"
+@rendermode InteractiveServer
 @inject Sam530.Services.RadiusService AuthService
 @inject NavigationManager Navigation
 @using Microsoft.AspNetCore.Components.Authorization
