--- a/Sam530/Components/Pages/UpdateFirmware.razor
+++ b/Sam530/Components/Pages/UpdateFirmware.razor
@@ -1,4 +1,5 @@
-﻿@page "/upload"
+﻿@attribute [Authorize]
+@page "/upload"
 @rendermode InteractiveServer
 @using Microsoft.AspNetCore.Components.Forms
 @using Sam530.Services
