--- a/Sam530/Components/Layout/MainLayout.razor
+++ b/Sam530/Components/Layout/MainLayout.razor
@@ -1,4 +1,5 @@
 ﻿@inherits LayoutComponentBase
+@using Sam530.Services
 
 <div class="page">
     <div class="sidebar">
@@ -17,3 +18,5 @@
     <a href="" class="reload">Reload</a>
     <a class="dismiss">🗙</a>
 </div>
+
+
