--- a/Sam530/Components/Pages/Login.razor
+++ b/Sam530/Components/Pages/Login.razor
@@ -1,8 +1,11 @@
 ﻿@page "/login"
-@inject Sam530.Services.RadiusService AuthService
-@inject NavigationManager Navigation
+@rendermode InteractiveServer
+
 @using Microsoft.AspNetCore.Components.Authorization
 @using System.ComponentModel.DataAnnotations
+@using Sam530.Services
+@inject RadiusService AuthService
+@inject NavigationManager Navigation
 
 <h3>Iniciar sesión</h3>
 
@@ -27,6 +30,7 @@
     <button class="btn btn-primary" type="submit">Entrar</button>
 </EditForm>
 
+@inject UserSessionService Session
 @code {
     private LoginModel loginModel = new();
     private string? errorMessage;
@@ -45,7 +49,8 @@
         var ok = await AuthService.LoginAsync(loginModel.Username, loginModel.Password);
         if (ok)
         {
-            Navigation.NavigateTo("/");
+            await Session.LoginAsync(loginModel.Username);
+            Navigation.NavigateTo("/",forceLoad:true);
         }
         else
         {
