--- a/Sam530/Components/Shared/RedirectToLogin.razor
+++ b/Sam530/Components/Shared/RedirectToLogin.razor
@@ -4,6 +4,6 @@
     protected override void OnInitialized()
     {
         var returnUrl = Navigation.ToBaseRelativePath(Navigation.Uri);
-        Navigation.NavigateTo($"/login?returnUrl={Uri.EscapeDataString("/" + returnUrl)}", true);
+        Navigation.NavigateTo($"/login?returnUrl={Uri.EscapeDataString("/" + returnUrl)}");
     }
 }
